  Fixed STORE to cache attribute value in handle cache.
  Fixed seg fault returning LOB Locators reported by Raj Chandran.
  Fixed binding to allow overloaded scalars (not for 'inout' params).
  Fixed setting of $DBI::err to 0 triggering PrintWarn in DBI >= 1.41.
  Fixed some edge cases in row cache sizing.
  Fixed truncation error fetching very small numbers (1 ^ -130).

  Changed some utf8 internals for LOBs.
  Changed ORA_OCI constant from being just 7 or 8 to being a dualvar:
    in numeric context returns the major.minor version number (8.1, 9.2 etc)
    in string context it returns the full "major.minor.foo.bar" version string.
  Changed some SUCCESS_WITH_INFO situtions to be treated as a "warning"
    by setting $DBI::err to "0" (and so trigger PrintWarn in DBI >= 1.43)
    eg "ORA-28011: the account will expire soon; change your password now"
    and package compilation errors.

  Added automatic support for UTF-8 for both NLS_LANG and NLS_NCHAR
    Many thanks to Lincoln Baxter who did most of the hard work and testing
    and to Jeff Urlwin and others who also helped out.
    Perl 5.8.x and Oracle 9+ are highly recommended if you want to use Unicode.
    See POD for more information and documentation.
  Added support for "... RETURNING lob_locator_column INTO ?"
    using $sth->bind_param_inout(2, \$loc, 0, {ora_type => ORA_BLOB});
  Added bind_param() support for SQL_BLOB & SQL_CLOB thanks to Stephen Clouse.
  Added $dbh->ora_can_unicode and $dbh->ora_nls_parameters thanks to Andy Hassall.

  Documentation changes:
    Corrected typo in ora_lob_read() example thanks to Johannes Wierny.
    Corrected LOB example thanks to Sascha Pfalz and Thomas Upton.
    Updated README.macosx thanks to Hilmar Lapp.
    Added $dbh->reauthenticate($user,$pass) docs thanks to Andy Hassall.
    Added $dbh->{ora_parse_error_offset} docs thanks to Andy Hassall.
    Added gcc example to README.aix thanks to Adrian Terranova.

  Build Changes: